# AIinvestmentAgent

./: .env.example  .gitignore  AGENTS.md  README.md  STATUS.md  design plan.md  pyproject.toml
commands/: morning-brief.md  research-goal.md  risk-review.md  thesis-review.md
deploy/hermes/: config.daily.snippet.yaml  config.research-admin.snippet.yaml  config.snippet.yaml
deploy/launchd/: com.local.invest-agent-advisor-scheduler.plist  com.local.invest-agent-api.plist  com.local.invest-agent-daily-post-close.plist  com.local.invest-agent-scheduler.plist
docs/: permissions.md
scripts/: install_hermes.sh  setup_local.sh
skills/advisor_brief/: SKILL.md
skills/committee_review/: SKILL.md
skills/earnings_preview/: SKILL.md
skills/hypothesis_review/: SKILL.md
skills/market_regime/: SKILL.md
skills/portfolio_risk/: SKILL.md
skills/shadow_review/: SKILL.md
skills/thesis_update/: SKILL.md
src/invest_agent/: __init__.py  accounting.py  advice_readiness.py  advisor.py  advisor_orchestrator.py  advisor_scheduler.py  api.py  autonomy.py  backtest_imports.py  catalysts.py  cli.py  committee_reviews.py  config.py  daily_briefs.py  daily_pipeline.py  data_bridge.py  data_quality.py  demo_data.py  deps.py  dividend_lens.py  earnings_preview.py  earnings_review.py  event_replay.py  evidence_repair.py  futu_adapter.py  hermes_config.py  hypotheses.py  idea_inbox.py  investor_committee.py  investor_policy.py  ir_feeds.py  launchd_manager.py  market_context.py  market_data_router.py  market_news.py  market_regime.py  mcp_server.py  models.py  opportunity_radar.py  options_lens.py  (+26 more)
tests/: test_accounting_ips.py  test_advisor.py  test_autonomy.py  test_catalysts.py  test_committee_reviews.py  test_dashboard_ui.py  test_data_hardening.py  test_earnings_review.py  test_event_replay.py  test_futu_adapter.py  test_investor_committee.py  test_market_context.py  test_market_news.py  test_market_regime.py  test_next_phase_layers.py  test_opportunity_radar.py  test_paper_advice.py  test_policy_flow.py  test_primary_sources.py  test_proposal_drafts.py  test_research_cockpit_guardrails.py  test_research_goals.py  test_run_cards.py  test_runtime_doctor.py  test_sec_companyfacts.py  test_shadow_account.py  test_signals.py  test_thesis_tracker.py  test_trade_journal.py
