[project]
name = "ai-investment-agent"
version = "0.1.0"
description = "Local investment control plane with Hermes Agent MCP integration."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "mcp>=1.9.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]
futu = [
  "futu-api>=9.3.5308",
]

[project.scripts]
invest-agent-api = "invest_agent.api:main"
invest-agent-mcp = "invest_agent.mcp_server:main"
invest-agent-seed = "invest_agent.cli:seed_main"
invest-agent-smoke = "invest_agent.cli:smoke_main"
invest-agent-futu-refresh = "invest_agent.cli:futu_refresh_main"

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
