[project]
name = "ai-investment-agent"
version = "0.1.0"
description = "Local investment control plane with Hermes Agent MCP integration."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "mcp>=1.9.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]
futu = [
  "futu-api>=9.3.5308",
]

[project.scripts]
invest-agent-api = "invest_agent.api:main"
invest-agent-mcp = "invest_agent.mcp_server:main"
invest-agent-seed = "invest_agent.cli:seed_main"
invest-agent-smoke = "invest_agent.cli:smoke_main"
invest-agent-futu-refresh = "invest_agent.cli:futu_refresh_main"
invest-agent-news-refresh = "invest_agent.cli:news_refresh_main"
invest-agent-draft-proposals = "invest_agent.cli:draft_proposals_main"
invest-agent-draft-and-create = "invest_agent.cli:draft_and_create_main"
invest-agent-primary-refresh = "invest_agent.cli:primary_refresh_main"
invest-agent-fundamentals-refresh = "invest_agent.cli:fundamentals_refresh_main"
invest-agent-event-export = "invest_agent.cli:event_export_main"
invest-agent-event-replay = "invest_agent.cli:event_replay_main"
invest-agent-autonomy-once = "invest_agent.cli:autonomy_once_main"
invest-agent-autonomy-loop = "invest_agent.cli:autonomy_loop_main"
invest-agent-autonomy-status = "invest_agent.cli:autonomy_status_main"
invest-agent-doctor = "invest_agent.cli:doctor_main"
invest-agent-signals-run = "invest_agent.cli:signals_run_main"
invest-agent-signals-latest = "invest_agent.cli:signals_latest_main"
invest-agent-schema-check = "invest_agent.cli:schema_check_main"
invest-agent-advisor-pulse = "invest_agent.cli:advisor_pulse_main"
invest-agent-pre-market-brief = "invest_agent.cli:pre_market_brief_main"
invest-agent-post-close-brief = "invest_agent.cli:post_close_brief_main"
invest-agent-advisor-scheduler-once = "invest_agent.cli:advisor_scheduler_once_main"
invest-agent-advisor-scheduler-loop = "invest_agent.cli:advisor_scheduler_loop_main"

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
